<resources>
    <string name="app_name">TechIntellect</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="register_login">Login</string>
    <string name="register_fname">Full Name</string>
    <string name="register_email">Email address</string>
    <string name="register_pwd">Password</string>
    <string name="register_cnfrm_pwd">Confirm Password</string>
    <string name="fp_forgotPasswordStr">Forgot your password?</string>
    <string name="fp_backBtnStr">&lt; Back</string>
    <string name="fp_NPstr">No Problem!!</string>
    <string name="fp_enterEmailStr">Enter your email address to reset password</string>
    <string name="fp_emailHintStr">Enter email address</string>
    <string name="fp_submitBtnStr">Submit</string>
    <string name="Tab1">Tab1</string>
    <string name="Tab2">Tab2</string>
    <string name="Choosing_topic">Choose a Topic</string>
    <string name="Choosing_difficulty">Choose Difficulty</string>
    <string name="Choosing_mode">Choose mode</string>
    <string name="Start_learning">Start</string>

    <string name="hint_email">Email</string>
    <string name="content_logo">Logo</string>
    <string name="icon_email">Email icon</string>
    <string name="icon_password">Password icon</string>
    <string name="hint_password">Password</string>
    <string name="btn_signIn">Sign in</string>
    <string name="link_forgotPwd">Forgot Password?</string>
    <string name="text_signUp">New to intellect?</string>
    <string name="link_signUp">Sign Up</string>
    <string name="text_or">-------------------------------------  Or  --------------------------------------</string>
    <string name="btn_signInGuest">Sign in as a Guest</string>

    <string name="cp_changePasswordStr">Change Password</string>
    <string name="cp_oldPasswordStr">Old Password</string>
    <string name="cp_newPasswordStr">New Password</string>
    <string name="cp_confirmNewPwStr">Confirm New Password</string>
</resources>
