<?xml version="1.0" encoding="utf-8"?>
<LinearLayout


    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        android:contentDescription="@string/content_logo"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/email"
            android:layout_marginTop="22dp"
            android:contentDescription="@string/icon_email"
            />

    <android.support.design.widget.TextInputLayout


        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/email">




        <android.support.design.widget.TextInputEditText

            android:id="@+id/et_email"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:layout_marginLeft="10dp"
            android:inputType="textEmailAddress"/>




    </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/password"
            android:layout_marginTop="22dp"
            android:contentDescription="@string/icon_password"
            />

    <android.support.design.widget.TextInputLayout

        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/password"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        >




        <android.support.design.widget.TextInputEditText

            android:id="@+id/et_password"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:layout_marginLeft="10dp"


            />

    </android.support.design.widget.TextInputLayout>
    </LinearLayout>

        <Button

            android:id="@+id/btn_signIn"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_signIn"
            android:textColor="#ffffff"
            android:background="#5c93ed"
            android:layout_marginBottom="10dp"


        />
    <TextView

        android:id="@+id/btn_forgoPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:linksClickable="true"
        android:text="@string/link_forgotPwd"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:textColor="#2196f3"
        android:onClick="forgotPassword"


        />

    <LinearLayout


        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:onClick="signUp"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_signUp"
            android:layout_marginRight="7dp"
            />

        <TextView

            android:id="@+id/btn_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="#2196f3"
            android:autoLink="web"
            android:linksClickable="true"

            />


    </LinearLayout>


    <TextView

        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_or"
        android:layout_marginBottom="10dp"

        />



    <Button

        android:id="@+id/btn_guest"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_signInGuest"
        android:textColor="#ffffff"
        android:background="#5c93ed"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginBottom="10dp"

        />

</LinearLayout>