<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:id="@+id/fp_backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fp_backBtnStr"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/fp_forgotPasswordStr"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="33dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/fp_NPstr"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="23dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/fp_enterEmailStr"
        android:layout_marginTop="20dp"
        android:textSize="18dp"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_address"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/fp_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="@string/fp_emailHintStr"
            android:inputType="textEmailAddress"
            android:layout_marginTop="20dp"
            android:textColorLink="@android:color/holo_blue_dark"
            android:drawableLeft="@drawable/email"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/fp_submitBtn"
        android:background="#5c93ed"
        android:text="@string/fp_submitBtnStr"
        android:textColor="#fff" />

</LinearLayout>
