<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
        android:id="@+id/quiz_topics_spinner"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/Choosing_topic"
        android:textColorHint="#0000ff"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:met_floatingLabel="normal" />

    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
        android:id="@+id/difficulty_level_spinner"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/Choosing_difficulty"
        android:textColorHint="#0000ff"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        app:met_floatingLabel="normal" />

    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
        android:id="@+id/mode_spinner"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/Choosing_mode"
        android:textColorHint="#0000ff"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        app:met_floatingLabel="normal" />

    <Button
        android:id="@+id/btnTakeQuiz"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="0sp"
        android:layout_marginTop="80dp"
        android:background="#5c93ed"
        android:text="@string/Start_learning"
        android:textColor="@android:color/background_light" />


</LinearLayout>