<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:id="@+id/cp_backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fp_backBtnStr"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/cp_changePasswordStr"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="33dp"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/oldPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:passwordToggleEnabled="true"
        android:layout_gravity="center_horizontal">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/cp_old_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/cp_oldPasswordStr"
            android:inputType="textPassword"
            android:textColorLink="@android:color/holo_blue_dark"
            android:drawableStart="@drawable/password" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/newPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:passwordToggleEnabled="true"
        android:layout_gravity="center_horizontal">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/cp_newPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/cp_newPasswordStr"
            android:inputType="textPassword"
            android:textColorLink="@android:color/holo_blue_dark"
            android:drawableStart="@drawable/password" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/confirmPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:passwordToggleEnabled="true"
        android:layout_gravity="center_horizontal">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/cp_confirmPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/cp_confirmNewPwStr"
            android:inputType="textPassword"
            android:textColorLink="@android:color/holo_blue_dark"
            android:drawableStart="@drawable/password" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/cp_submitBtn"
        android:background="#5c93ed"
        android:text="@string/fp_submitBtnStr"
        android:textColor="#fff" />

</LinearLayout>
