<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/register"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="33dp"
        android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/full_name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/full_name_value"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="20"
                android:hint="@string/register_fname"
                android:inputType="textPersonName"
                android:textColorLink="@android:color/holo_blue_dark"
                android:drawableLeft="@drawable/user_name"/>
        </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_address"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/email_address_value"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="@string/register_email"
            android:inputType="textEmailAddress"
            android:textColorLink="@android:color/holo_blue_dark"
            android:drawableLeft="@drawable/email"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:passwordToggleEnabled="true"
        android:layout_gravity="center_horizontal">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/create_new_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/register_pwd"
            android:inputType="textPassword"
            android:textColorLink="@android:color/holo_blue_dark"
            android:drawableStart="@drawable/password" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/confirm_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:passwordToggleEnabled="true"
        android:layout_gravity="center_horizontal">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/confirm_password_value"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="@string/register_cnfrm_pwd"
            android:inputType="textPassword"
            android:textColorLink="@android:color/holo_blue_dark"
            android:drawableStart="@drawable/password"/>
    </android.support.design.widget.TextInputLayout>


    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/Sign_up_btn"
        android:background="#5c93ed"
        android:text="@string/sign_up"
        android:textColor="#fff" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/already_have_account"
        android:textColor="@android:color/black"
        android:textSize="18dp"
        android:layout_marginTop="14dp"
        android:fontFamily="sans-serif"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/login_link"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="7dp"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:linksClickable="true"
            android:textColor="@color/design_default_color_primary"
            android:textSize="18dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="7dp"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:text=" here."
            android:textColor="@android:color/black"
            android:textSize="18dp" />

    </LinearLayout>



</LinearLayout>